--- a/src/app/components/acercade/acercade.component.html
+++ b/src/app/components/acercade/acercade.component.html
@@ -122,7 +122,7 @@
       (click)="toogleForm()"
       (click)="open(content)"
     >
-      <i class="fa fa-plus"></i>
+      <i class="fa fa-pen"></i>
     </button>
 
     <div class="btn-edit" oneclick="cambiar_paraffo()">
@@ -146,20 +146,15 @@
 
         <div id="info-ubicacion">
           <span><h2>{{ ubicacionl }} - {{ ubicacionp }}</h2></span>
-          <br />
+          
         </div>
 
-        <span><a href={{contact}}>Contactame</a>
-        
-
-
-
-</span>
+        <span><a href={{contact}}>Contactame</a></span>
       </div>
     </div>
 
     <hr />
-    <h2>{{ acercade }}</h2>
+ 
     <h2>{{ descripcionacercade }}</h2>
     <div *ngIf="onSession">
       <div *ngIf="onSessionacerca">
@@ -174,7 +169,7 @@
       </div>
       <form [formGroup]="forma" (ngSubmit)="onSubmit($event)">
         <div class="mb-3">
-          <label class="form-label" for="edescripcion">Descripcion:</label>
+          <label class="form-label" for="edescripcion"></label>
           <input
             class="form-control"
             type="text"
