--- a/src/app/components/experience-item/experience-item.component.html
+++ b/src/app/components/experience-item/experience-item.component.html
@@ -35,8 +35,10 @@
   <div>
     <h2>{{ experiencia?.nombre }}</h2>
     <h2>Puesto: {{ experiencia?.descripcion }}</h2>
-  
-    <h3>Fecha Inicio: {{ experiencia?.fechaIni }} - {{ experiencia?.fechaFin }}</h3>
+
+    <h3>
+      Fecha Inicio: {{ experiencia?.fechaIni }} - {{ experiencia?.fechaFin }}
+    </h3>
     <h3>{{ experiencia?.actual }}</h3>
   </div>
 
@@ -124,7 +126,7 @@
   </ng-template>
 
   <pre>{{ closeResult }}</pre>
-  
+
   <!--
   <p>{{ experiencia.id }}</p>
   
